--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
+    "use-immer": "^0.8.1",
     "web-vitals": "^3.1.1"
   },
   "devDependencies": {
